grammar.js
    source_file: $ => seq(
      choice($.union_statement, $.statement),
      repeat(seq(';', choice($.union_statement, $.statement))),
      optional(';'),
    ),

    // BNF: <composite conjunction> ::= UNION [ALL]
    // Chained: A UNION B UNION C parsed left-recursively
    union_statement: $ => prec.left(0, seq(
      choice($.union_statement, $.statement),
      kw('UNION'),
      optional(kw('ALL')),
      $.statement,
    )),

    // BNF: <linear statement> — any sequence of reading/pipeline/mutation clauses + RETURN
    // A flat clause list avoids ordering conflicts while covering all TCK patterns.
    _pipeline_clause: $ => choice(
      $.match_clause, $.with_clause, $.unwind_clause,
      $._updating_clause, $.call_clause,
    ),

    statement: $ => choice(
      seq(repeat1($._pipeline_clause), $.return_clause),
      repeat1($._pipeline_clause),
      $.return_clause,
    ),

    // ─── T020: MATCH clause ───────────────────────────────────────────────────
    // BNF: <simple match statement> ::= MATCH <pattern>
    // BNF: <optional match statement> ::= OPTIONAL MATCH <pattern>
    match_clause: $ => seq(
      optional(kw('OPTIONAL')),
      kw('MATCH'),
      field('pattern', $.pattern),
      optional(field('where', $.where_clause)),
    ),

    // ─── T029: Node pattern (extended from US2 stub) ─────────────────────────
    // BNF: <node pattern> ::= ( [<binding variable>] [<is label expression>] [<properties>] )
    node_pattern: $ => seq(
      '(',
      optional(field('variable', $.identifier)),
      optional(field('label', $.label_expression)),
      optional(field('properties', $.property_map)),
      ')',
    ),

    // ─── T030: Label expression ───────────────────────────────────────────────
    // BNF: <is node label expression> ::= : <label> | IS <label expression>
    // BNF: <label expression> ::= <label term> | <label expression> | <label term>
    // Also supports legacy colon-chain: :A:B:C (multiple labels on same node/rel)
    label_expression: $ => choice(
      // IS <label expression> (new-style: IS A&B)
      seq(kw('IS'), $._label_expr_inner),
      // :<label>+ (legacy colon-prefixed, possibly chained)
      seq(':', $._label_expr_inner, repeat(seq(':', $._label_expr_inner))),
    ),

    _label_expr_inner: $ => choice(
      prec.left(3, seq($._label_expr_inner, '&', $._label_expr_inner)),
      prec.left(2, seq($._label_expr_inner, '|', $._label_expr_inner)),
      prec.right(4, seq('!', $._label_expr_inner)),
      seq('(', $._label_expr_inner, ')'),
      // BNF: <label name> — a plain identifier; reuse $.identifier to avoid token conflict
      field('label_name', $.identifier),
    ),

    // ─── T031: Property map ───────────────────────────────────────────────────
    // BNF: <properties> ::= <map literal>
    property_map: $ => seq(
      '{',
      commaSep($.property_key_value),
      '}',
    ),

    property_key_value: $ => seq(
      $.identifier,
      ':',
      $.expression,
    ),

    // ─── T035: Pattern / path pattern ────────────────────────────────────────
    // BNF: <pattern> ::= <path pattern> [ { , <path pattern> }... ]
    pattern: $ => commaSep1($.path_pattern),

    // BNF: <path pattern> ::= [<path variable> =] <path pattern expression>
    path_pattern: $ => seq(
      optional(seq(field('variable', $.identifier), '=')),
      $.node_pattern,
      repeat(seq($.relationship_pattern, $.node_pattern)),
    ),

    // ─── T032: Relationship pattern ───────────────────────────────────────────
    // BNF: <relationship pattern> — directed or undirected, with optional body
    relationship_pattern: $ => choice(
      seq('<-', '[', optional($.relationship_body), ']', '-'),
      seq('-',  '[', optional($.relationship_body), ']', '->'),
      seq('-',  '[', optional($.relationship_body), ']', '-'),
      seq('<-', '-'),
      seq('-',  '->'),
      seq('-',  '-'),
    ),

    // ─── T033: Relationship body ─────────────────────────────────────────────
    // BNF: <relationship detail> ::= [<variable>] [<label>] [<path length>] [<properties>]
    // At least one component must be present (tree-sitter cannot parse empty-matching rules).
    // Usage sites use optional($.relationship_body) to handle the no-body case.
    relationship_body: $ => choice(
      seq(field('variable', $.identifier),
          optional(field('label', $.label_expression)),
          optional(field('length', $.path_length)),
          optional(field('properties', $.property_map))),
      seq(field('label', $.label_expression),
          optional(field('length', $.path_length)),
          optional(field('properties', $.property_map))),
      seq(field('length', $.path_length),
          optional(field('properties', $.property_map))),
      field('properties', $.property_map),
    ),

    // ─── T034: Path length ────────────────────────────────────────────────────
    // BNF: <path length> ::= * | *<n> | *<n>..<m> | *..<m>
    path_length: _ => token(seq(
      '*',
      optional(seq(
        /[0-9]+/,
        optional(seq('..', /[0-9]*/)),
      )),
    )),

    // ─── T057: WITH clause ───────────────────────────────────────────────────
    // BNF: <with statement> ::= WITH <return statement body> [ORDER BY] [SKIP] [LIMIT] [WHERE]
    order_by_clause: $ => seq(
      kw('ORDER'), kw('BY'),
      commaSep1($.sort_item),
    ),

    // BNF: <sort item> ::= <value expression> [ASC | DESC | ASCENDING | DESCENDING]
    sort_item: $ => seq(
      $.expression,
      optional(choice(kw('ASC'), kw('DESC'), kw('ASCENDING'), kw('DESCENDING'))),
    ),

    // ─── T060: SKIP and LIMIT ────────────────────────────────────────────────
    // BNF: <skip clause>, <limit clause>
    set_clause: $ => seq(kw('SET'), commaSep1($.set_item)),

    // BNF: <set item> — property assignment, map merge, map replace, or label set
    set_item: $ => choice(
      // n.prop = expr  (property assignment)
      seq($.property_access, '=', $.expression),
      // n = expr  (full replace)
      seq($.identifier, '=', $.expression),
      // n += expr  (map merge)
      seq($.identifier, '+=', $.expression),
      // n:Label  (label set)
      seq($.identifier, $.label_expression),
    ),

    // ─── T051: REMOVE clause ─────────────────────────────────────────────────
    // BNF: <remove statement> ::= REMOVE <remove item list>
    remove_clause: $ => seq(kw('REMOVE'), commaSep1($.remove_item)),

    // BNF: <remove item> — label removal or property removal
    remove_item: $ => choice(
      seq($.identifier, $.label_expression),   // n:Label
      $.property_access,                        // n.prop
    ),

    // ─── T052: DELETE clause ─────────────────────────────────────────────────
    // BNF: <delete statement> ::= [DETACH] DELETE <delete item list>
    delete_clause: $ => seq(
      optional(kw('DETACH')),
      kw('DELETE'),
      commaSep1($.expression),
    ),

    // ─── T022: WHERE clause ───────────────────────────────────────────────────
    // BNF: <where clause> ::= WHERE <value expression>
    where_clause: $ => seq(
      kw('WHERE'),
      $.expression,
    ),

    // ─── T023: RETURN clause ─────────────────────────────────────────────────
    // BNF: <return statement> ::= RETURN <return statement body> [ORDER BY] [SKIP] [LIMIT]
    return_clause: $ => seq(
      kw('RETURN'),
      $.return_body,
      optional($.order_by_clause),
      optional($.skip_clause),
      optional($.limit_clause),
    ),

    // BNF: <return statement body> ::= [DISTINCT] <return item list> | *
    return_body: $ => seq(
      optional(kw('DISTINCT')),
      choice('*', commaSep1($.return_item)),
    ),

    // BNF: <return item> ::= <value expression> [AS <identifier>]
    return_item: $ => seq(
      $.expression,
      optional(seq(kw('AS'), field('alias', $._symbolic_name))),
    ),

    // BNF: <symbolic name> — identifier or escaped identifier
    _symbolic_name: $ => choice($.identifier, $.escaped_identifier),

    // ─── T039–T046 + T075–T080: Full expression grammar ─────────────────────
    // BNF: <value expression> → <boolean value expression> → ... → <postfix expression>
    expression: $ => choice(
      // Parenthesized expression (BNF: <parenthesized value expression>)
      seq('(', $.expression, ')'),
      $.binary_expression,
      $.unary_expression,
      $.is_null_expression,
      $.in_expression,
      $.starts_with_expression,
      $.ends_with_expression,
      $.contains_expression,
      $.case_expression,
      $.list_comprehension,
      $.all_expression,
      $.any_expression,
      $.none_expression,
      $.single_expression,
      $.reduce_expression,
      $.count_star,
      $.function_call,
      $.subscript_expression,
      $.property_access,
      $.list_literal,
      $.map_literal,
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.boolean_literal,
      $.null_literal,
      $.parameter,
      $.escaped_identifier,
      $.identifier,
    ),

    // T039: Binary operators with precedence levels matching BNF nesting depth
    // BNF: <boolean value expression>, <arithmetic value expression>, <arithmetic term>
    binary_expression: $ => {
      const table = [
        [prec.left,  1,  kw('OR')],
        [prec.left,  2,  kw('XOR')],
        [prec.left,  3,  kw('AND')],
        [prec.left,  5,  choice('=', '<>', '<', '>', '<=', '>=', '=~')],
        [prec.left,  6,  choice('+', '-', '||')],
        [prec.left,  7,  choice('*', '/', '%')],
        [prec.right, 8,  '^'],
      ];
      return choice(...table.map(([fn, prec_, op]) =>
        fn(prec_, seq(
          field('left', $.expression),
          field('operator', op),
          field('right', $.expression),
        ))
      ));
    },

    // T040: Unary operators — NOT (level 4), unary +/- (level 9)
    // BNF: <boolean factor>, <unary arithmetic>
    map_literal: $ => seq('{', commaSep($.property_key_value), '}'),

    // T045: Subscript / index access and slice notation
    // BNF: <subscript operator>, <list slice>
    property_access: $ => prec.left(10, seq(
      field('object', $.expression),
      '.',
      field('property', $._symbolic_name),
    )),

    // ─── T075: CASE expression ───────────────────────────────────────────────
    // BNF: <case expression> — simple (with operand) or searched (without)
    integer_literal: _ => token(choice(
      /0[xX][0-9a-fA-F]+/,
      /0[oO][0-7]+/,
      /[0-9]+/,
    )),

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    parameter: _ => token(seq(
      '$',
      choice(/[a-zA-Z_][a-zA-Z0-9_]*/, /[0-9]+/),
    )),
